@@ -1,3 +1,8 @@
+1998-11-09    <bjg@ancho.lanl.gov>
+
+	* compare_source.c: fix up int/unsigned format types to prevent
+	warnings
+
 Wed Oct 28 15:07:22 1998  Brian Gough  <bjg@vvv.lanl.gov>
 
 	* c.c: added #include <string.h> for memcpy
